[gd_scene load_steps=2 format=3 uid="uid://btnljqu8yvupo"]

[ext_resource type="Script" uid="uid://c61qkx88p2xpq" path="res://scripts/paint_grid.gd" id="1_yjwph"]

[node name="PaintGrid" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_yjwph")

[node name="ButtonGrid" type="GridContainer" parent="."]
layout_mode = 0
offset_left = 20.0
offset_top = 20.0
offset_right = 20.0
offset_bottom = 20.0
theme_override_constants/h_separation = 0
theme_override_constants/v_separation = 0

[node name="NumGrid" type="GridContainer" parent="."]
layout_mode = 0
offset_left = 20.0
offset_top = 20.0
offset_right = 20.0
offset_bottom = 20.0
theme_override_constants/h_separation = 0
theme_override_constants/v_separation = 0

[node name="ColorGrid" type="GridContainer" parent="."]
layout_mode = 0
offset_left = 20.0
offset_top = 24.0
offset_right = 20.0
offset_bottom = 24.0
theme_override_constants/h_separation = 7

[node name="ColorNumGrid" type="GridContainer" parent="."]
layout_mode = 0
offset_left = 20.0
offset_top = 24.0
offset_right = 20.0
offset_bottom = 24.0
theme_override_constants/h_separation = 7
